[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
p256 = { version = "0.13", features = ["ecdsa","arithmetic"] }
rand_core = "0.10.0"
sha2 = "0.10.9"
ripemd160 ="0.9"
bs58 ="0.4"
serde ={ version = "1.0.207",features = ["derive"]}
serde_json ="1.0.124"
env_logger ="0.10"
log = "0.4"
actix-web = "4.1"